Fix dcheck failure for scrolling in app list

Background:
The dcheck in AppListView::SetIsIgnoringScrollEvents fails when user
scroll up and down quickly. (The pagination transition starts again
before ends).

Changes:
Do not make decision based on |is_ignoring_scroll_events_| which is set
by state change animation or pagination transition. Instead, check the
animator and pagination model directly to decide whether to ignore
scroll events.

BUG=836088

Change-Id: Ic7aef13e53d299af3165082d7dfa2f89974e20c0
Reviewed-on: https://chromium-review.googlesource.com/1031207
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554438}
Former-commit-id: 0a22fadf7e3ad386b0fcfb772f77a50efb27d5ba